[package]
name = "tsg-core-js"
version = "0.1.0"
authors = ["Yangyang Li <yangyang.li@northwestern.edu>"]
description = "A JavaScript wrapper for the TSG core library"
repository = "https://github.com/cauliyang/tsg-js"
license = "Apache-2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.64", features = ["console"] }
tsg-core = { version = "0.1.5" }
getrandom = { version = "^0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1.7", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
